application/simple-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hacktoberfest
  name: hello-app-service
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 8080
