application/simple-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: hacktoberfest-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: hello-app
  namespace: hacktoberfest
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-app-service
              port: 
                number: 8080
